--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "adventofcode",
+  "name": "adventofcode_day5",
   "version": "1.0.0",
-  "description": "adventofcode",
+  "description": "Day5 challenge from adventofcode.com",
   "homepage": "https://github.com/mvoss9000/adventofcode_day5",
   "url": "https://github.com/mvoss9000/adventofcode_day5/issues",
   "repository": "mvoss9000/adventofcode_day5",
